--- a/src/layout/_media.scss
+++ b/src/layout/_media.scss
@@ -174,6 +174,13 @@
   }
   .footer {
     position: relative;
+    span , p {
+      font-size: 1rem;
+    }
+    img {
+      width: 30px;
+      height: 30px;
+    }
   }
   .card-holder {
     flex-direction: column-reverse;
